--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,14 @@ jobs:
           - {os: ubuntu-latest, compiler: gcc, version: '10',
              boost-version: '1.58.0'}
 
+          # NDEBUG builds
+          - {os: ubuntu-latest, compiler: gcc, version: '10',
+             flags: '-Wsuggest-override -DNDEBUG', extra-desc: 'NDEBUG'}
+          - {os: ubuntu-latest, compiler: clang, version: '11',
+             flags: '-DNDEBUG', extra-desc: 'NDEBUG'}
+          - {os: windows-latest, compiler: msvc, flags: '/DNDEBUG',
+             version: '14.28', boost-version: '1.72.0', extra-desc: 'NDEBUG'}
+
           # C++20 builds
           - {os: ubuntu-latest, compiler: gcc, version: '10',
              options: '--std=c++20', flags: '-Wsuggest-override',
