Add support for GCC 7 again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
       matrix:
         include:
           # GCC builds
+          - {os: ubuntu-latest, compiler: gcc, version:  '7',
+             flags: '-Wsuggest-override'}
           - {os: ubuntu-latest, compiler: gcc, version:  '8',
              flags: '-Wsuggest-override'}
           - {os: ubuntu-latest, compiler: gcc, version:  '9',
