--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,12 @@ jobs:
           - {os: ubuntu-latest, compiler: clang, version: '12'}
 
           # Windows builds
-          - {os: windows-2016,   compiler: msvc, version: '14.16',
-             boost-version: '1.72.0'}
-          - {os: windows-latest, compiler: msvc, version: '14.29',
-             boost-version: '1.72.0'}
+          - {os: windows-2019, compiler: msvc, version: '14.16',    # VS 2017
+             boost-version: '1.78.0'}
+          - {os: windows-2019, compiler: msvc, version: '14.29',    # VS 2019
+             boost-version: '1.78.0'}
+          - {os: windows-latest, compiler: msvc, version: '14.31',  # VS 2022
+             boost-version: '1.78.0'}
 
           # macOS builds
           - {os: macos-latest, compiler: clang}
@@ -70,9 +72,9 @@ jobs:
           # C++20 builds
           - {os: ubuntu-latest, compiler: gcc, version: '11',
              options: '--std=c++20', flags: '-Wsuggest-override',
-             boost-version: '1.74.0', extra-desc: 'c++20'}
+             boost-version: '1.78.0', extra-desc: 'c++20'}
           - {os: ubuntu-latest, compiler: clang, version: '12',
-             options: '--std=c++20', boost-version: '1.74.0',
+             options: '--std=c++20', boost-version: '1.78.0',
              extra-desc: 'c++20'}
 
           # Make-backend builds
