Update to use bfg v0.7 features

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,6 +183,6 @@ jobs:
           toolset: ${{ matrix.version }}
       - name: Run tests
         run: |
-          9k build --backend=${{ matrix.backend || 'ninja' }} --vendorize ${{ matrix.options }}
+          9k build --backend=${{ matrix.backend || 'ninja' }} ${{ matrix.options }}
           cd build
           ${{ matrix.backend || 'ninja' }} test
