Update compiler versions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
       matrix:
         include:
           # GCC builds
-          - {os: ubuntu-latest, compiler: gcc, version:  '7',
+          - {os: ubuntu-20.04, compiler: gcc, version:   '7',
              flags: '-Wsuggest-override'}
-          - {os: ubuntu-latest, compiler: gcc, version:  '8',
+          - {os: ubuntu-20.04, compiler: gcc, version:   '8',
              flags: '-Wsuggest-override'}
           - {os: ubuntu-latest, compiler: gcc, version:  '9',
              flags: '-Wsuggest-override'}
@@ -33,16 +33,20 @@ jobs:
              flags: '-Wsuggest-override'}
           - {os: ubuntu-latest, compiler: gcc, version: '11',
              flags: '-Wsuggest-override'}
-          - {os: ubuntu-22.04,  compiler: gcc, version: '12',
+          - {os: ubuntu-latest, compiler: gcc, version: '12',
+             flags: '-Wsuggest-override'}
+          - {os: ubuntu-latest, compiler: gcc, version: '13',
              flags: '-Wsuggest-override'}
 
           # Clang builds
-          - {os: ubuntu-latest, compiler: clang, version:  '9'}
-          - {os: ubuntu-latest, compiler: clang, version: '10'}
-          - {os: ubuntu-latest, compiler: clang, version: '11'}
-          - {os: ubuntu-latest, compiler: clang, version: '12'}
+          - {os: ubuntu-20.04,  compiler: clang, version:  '9'}
+          - {os: ubuntu-20.04,  compiler: clang, version: '10'}
+          - {os: ubuntu-20.04,  compiler: clang, version: '11'}
+          - {os: ubuntu-20.04,  compiler: clang, version: '12'}
           - {os: ubuntu-latest, compiler: clang, version: '13'}
           - {os: ubuntu-latest, compiler: clang, version: '14'}
+          - {os: ubuntu-latest, compiler: clang, version: '15'}
+          - {os: ubuntu-latest, compiler: clang, version: '16'}
 
           # Windows builds
           - {os: windows-2019,   compiler: msvc, version: '14.16',  # VS 2017
@@ -58,13 +62,13 @@ jobs:
           # Boost 1.58 builds
           # (Test 1.58 specifically because it has very strict rules for
           # Boost.Variant.)
-          - {os: ubuntu-latest, compiler: gcc, version: '11',
+          - {os: ubuntu-latest, compiler: gcc, version: '13',
              boost-version: '1.58.0'}
 
           # NDEBUG builds
-          - {os: ubuntu-22.04, compiler: gcc, version: '12',
+          - {os: ubuntu-latest, compiler: gcc, version: '13',
              flags: '-Wsuggest-override -DNDEBUG', extra-desc: 'NDEBUG'}
-          - {os: ubuntu-latest, compiler: clang, version: '14',
+          - {os: ubuntu-latest, compiler: clang, version: '16',
              flags: '-DNDEBUG', extra-desc: 'NDEBUG'}
           - {os: windows-latest, compiler: msvc, flags: '/DNDEBUG',
              version: '14.34', boost-version: '1.80.0', extra-desc: 'NDEBUG'}
@@ -72,17 +76,17 @@ jobs:
              extra-desc: 'NDEBUG'}
 
           # C++20 builds
-          - {os: ubuntu-22.04, compiler: gcc, version: '12',
+          - {os: ubuntu-latest, compiler: gcc, version: '13',
              options: '--std=c++20', flags: '-Wsuggest-override',
-             boost-version: '1.80.0', extra-desc: 'c++20'}
-          - {os: ubuntu-latest, compiler: clang, version: '14',
-             options: '--std=c++20', boost-version: '1.80.0',
+             boost-version: '1.78.0', extra-desc: 'c++20'}
+          - {os: ubuntu-latest, compiler: clang, version: '16',
+             options: '--std=c++20', boost-version: '1.78.0',
              extra-desc: 'c++20'}
 
           # Make-backend builds
-          - {os: ubuntu-22.04, compiler: gcc, version: '12',
+          - {os: ubuntu-latest, compiler: gcc, version: '13',
              backend: 'make', flags: '-Wsuggest-override'}
-          - {os: ubuntu-latest, compiler: clang, version: '14',
+          - {os: ubuntu-latest, compiler: clang, version: '16',
              backend: 'make'}
       fail-fast: false
     env:
