--- a/mopack.yml
+++ b/mopack.yml
@@ -2,4 +2,4 @@ packages:
   bencodehpp:
     origin: git
     repository: https://github.com/jimporter/bencode.hpp.git
-    commit: 2312b988924ce178e6b5283cbb831068925fc2eb
+    tag: v1.0.0
