--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,8 @@ jobs:
              boost-version: '1.80.0'}
 
           # macOS builds
-          - {os: macos-latest, compiler: clang}
+          # FIXME: Remove -Wno-deprecated flag.
+          - {os: macos-latest, compiler: clang, flags: '-Wno-deprecated'}
 
           # Boost 1.58 builds
           # (Test 1.58 specifically because it has very strict rules for
@@ -72,8 +73,9 @@ jobs:
              flags: '-DNDEBUG', extra-desc: 'NDEBUG'}
           - {os: windows-latest, compiler: msvc, flags: '/DNDEBUG',
              version: '14.34', boost-version: '1.80.0', extra-desc: 'NDEBUG'}
-          - {os: macos-latest, compiler: clang, flags: '-DNDEBUG',
-             extra-desc: 'NDEBUG'}
+          # FIXME: Remove -Wno-deprecated flag.
+          - {os: macos-latest, compiler: clang,
+             flags: '-Wno-deprecated -DNDEBUG', extra-desc: 'NDEBUG'}
 
           # C++20 builds
           - {os: ubuntu-latest, compiler: gcc, version: '13',
@@ -136,6 +138,7 @@ jobs:
         if: startsWith(matrix.os, 'macos-')
         run: |
           brew install ninja pkg-config boost
+          echo "CXXFLAGS=${COMMONFLAGS} ${{ matrix.flags }}" >> ${GITHUB_ENV}
       - name: Install Boost ${{ matrix.boost-version }} from source
         if: "!startsWith(matrix.os, 'windows-') && matrix.boost-version"
         run: |
