Fix installation via chocolatey in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Install Windows dependencies
         if: startsWith(matrix.os, 'windows-')
         run: |
-          cinst ninja
+          choco install ninja
           ${gnomebase} = "https://ftp.gnome.org/pub/gnome/binaries/win32"
           curl -LO ${gnomebase}/dependencies/pkg-config_0.26-1_win32.zip
           curl -LO ${gnomebase}/glib/2.28/glib_2.28.8-1_win32.zip
