--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,10 @@ jobs:
       matrix:
         include:
           # GCC builds
-          - {os: ubuntu-20.04, compiler: gcc, version:   '7',
-             flags: '-Wsuggest-override'}
           - {os: ubuntu-20.04, compiler: gcc, version:   '8',
-             flags: '-Wsuggest-override'}
+             options: '--std=c++2a', flags: '-Wsuggest-override'}
           - {os: ubuntu-latest, compiler: gcc, version:  '9',
-             flags: '-Wsuggest-override'}
+             options: '--std=c++2a', flags: '-Wsuggest-override'}
           - {os: ubuntu-latest, compiler: gcc, version: '10',
              flags: '-Wsuggest-override'}
           - {os: ubuntu-latest, compiler: gcc, version: '11',
@@ -39,7 +37,8 @@ jobs:
              flags: '-Wsuggest-override'}
 
           # Clang builds
-          - {os: ubuntu-20.04,  compiler: clang, version:  '9'}
+          - {os: ubuntu-20.04,  compiler: clang, version:  '9',
+             options: '--std=c++2a'}
           - {os: ubuntu-20.04,  compiler: clang, version: '10'}
           - {os: ubuntu-20.04,  compiler: clang, version: '11'}
           - {os: ubuntu-20.04,  compiler: clang, version: '12'}
@@ -49,21 +48,15 @@ jobs:
           - {os: ubuntu-latest, compiler: clang, version: '16'}
 
           # Windows builds
-          - {os: windows-2019,   compiler: msvc, version: '14.1',  # VS 2017
-             boost-version: '1.80.0'}
-          - {os: windows-2019,   compiler: msvc, version: '14.2',  # VS 2019
-             boost-version: '1.80.0'}
           - {os: windows-latest, compiler: msvc, version: '14.4',  # VS 2022
              boost-version: '1.80.0'}
 
           # macOS builds
           - {os: macos-latest, compiler: clang}
 
-          # Boost 1.58 builds
-          # (Test 1.58 specifically because it has very strict rules for
-          # Boost.Variant.)
+          # Boost 1.67 builds (our minimum required Boost)
           - {os: ubuntu-latest, compiler: gcc, version: '13',
-             boost-version: '1.58.0'}
+             boost-version: '1.67.0'}
 
           # NDEBUG builds
           - {os: ubuntu-latest, compiler: gcc, version: '13',
@@ -75,13 +68,13 @@ jobs:
           - {os: macos-latest, compiler: clang, flags: '-DNDEBUG',
              extra-desc: 'NDEBUG'}
 
-          # C++20 builds
+          # C++23 builds
           - {os: ubuntu-latest, compiler: gcc, version: '13',
-             options: '--std=c++20', flags: '-Wsuggest-override',
-             boost-version: '1.78.0', extra-desc: 'c++20'}
+             options: '--std=c++23', flags: '-Wsuggest-override',
+             boost-version: '1.85.0', extra-desc: 'c++23'}
           - {os: ubuntu-latest, compiler: clang, version: '16',
-             options: '--std=c++20', boost-version: '1.78.0',
-             extra-desc: 'c++20'}
+             options: '--std=c++2b', boost-version: '1.85.0',
+             extra-desc: 'c++23'}
 
           # Make-backend builds
           - {os: ubuntu-latest, compiler: gcc, version: '13',
