--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,10 +38,10 @@ jobs:
           - {os: ubuntu-20.04,  compiler: clang, version: '10'}
           - {os: ubuntu-20.04,  compiler: clang, version: '11'}
           - {os: ubuntu-20.04,  compiler: clang, version: '12'}
-          - {os: ubuntu-latest, compiler: clang, version: '13'}
-          - {os: ubuntu-latest, compiler: clang, version: '14'}
-          - {os: ubuntu-latest, compiler: clang, version: '15'}
-          - {os: ubuntu-latest, compiler: clang, version: '16'}
+          - {os: ubuntu-22.04,  compiler: clang, version: '13'}
+          - {os: ubuntu-22.04,  compiler: clang, version: '14'}
+          - {os: ubuntu-22.04,  compiler: clang, version: '15'}
+          - {os: ubuntu-22.04,  compiler: clang, version: '16'}
           - {os: ubuntu-latest, compiler: clang, version: '17'}
           - {os: ubuntu-latest, compiler: clang, version: '18'}
 
